--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/implodingduck/phaserfun#readme",
   "dependencies": {
-    "phaser-ce": "^2.7.7"
+    "express": "^4.15.2",
+    "jquery": "^3.2.1",
+    "phaser-ce": "^2.7.7",
+    "socket.io": "^1.7.3"
   }
 }
